--- a/server/package.json
+++ b/server/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/mouton0815/view-every-tile#readme",
   "dependencies": {
-    "express": "^4.18.3"
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "gpxparser": "^3.0.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.28",
     "typescript": "^5.4.2"
