--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Delivers all GPX files of a folder",
   "main": "src/server.ts",
+  "type": "module",
   "scripts": {
-    "start": "tsc && node dist/main.js"
+    "build": "tsc",
+    "start": "tsc && node dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +21,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "gpxparser": "^3.0.8"
+    "gpxparser": "^3.0.8",
+    "tiles-math": "^1.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
